# datagov-harvester

./: .env  .env.sample  .gitignore  .pre-commit-config.yaml  .profile  .snyk  .yamllint  CONTRIBUTING.md  Dockerfile  LICENSE.md  Makefile  README.md  SECURITY.md  airflow.cfg  alembic.ini  app-start.sh  app.py  celeryconfig.py  create-cloudgov-services.sh  create_cloudgov_service.sh  create_cloudgov_services.sh  docker-compose.yaml  docker-compose.yml  docker-compose_celery.yml  docker-compose_debug.yml  docker-compose_local-executor.yml  docker-compose_prod.yaml  docker-compose_prod.yml  get_service_key.sh  gunicorn.conf.py  harvest-admin-start.sh  main.py  manifest-standalone.yml  manifest.yml  manifest_docker.yml  manifest_local-executor.yml  new-lock-file.txt  nginx.conf  old-lock-file.txt  package-lock.json  (+12 more)
.devcontainer/: devcontainer.json
.github/: dependabot.yml  deploy_failure.md  egress_check_error.md  missing_datasets.md  opensearch_index_batch_failure.md  opensearch_sync_failure.md
.github/scripts/: compute-asset-version.sh
.github/workflows/: add_to_project.yml  commit.yml  delete_opensearch_index.yml  deploy.yml  e2e.yml  egress-check.yml  load_test.yml  missing_outdated_datasets.yml  publish.yml  qa.yml  rebuild_opensearch_index.yml  refresh_dataset_mv.yml  restart.yml  snyk.yml  sync.yml  synchronize_opensearch_index.yml  test.yml  toggle_harvester.yml  update_dataset_view_counts.yml
airflow/: .devcontainer.json  .env  .profile  README.md  docker-compose.yaml  manifest.yml  requirements.txt  vars.development.yml
airflow/dags/: dcatus_etl.py  dcatus_pipeline.py  etl_pipeline.py  extract.py  transform.py
airflow/schemas/: dataset.json
alembic/: env.py
alembic/versions/: 0a7491e3a412_initial_migration.py
app/: __init__.py  api_schemas.py  auth.py  auth_logging.py  constants.py  deps.py  filters.py  flask-app-structure.txt  forms.py  interface.py  local_dev_auth.py  models.py  paginate.py  readme.txt  routes.py  startup_validation.py  static_assets.py  util.py
app/api/: __init__.py  harvest_jobs.py  harvest_records.py  harvest_sources.py  organizations.py  query.py  validate.py
app/blueprints/: __init__.py
app/commands/: __init__.py  database.py  evaluate_sources.py  job.py  opensearch.py  org.py  search.py  source.py  testdata.py  user.py
app/main/: __init__.py  auth.py  harvest_jobs.py  harvest_sources.py  organizations.py  pages.py
app/routes/: __init__.py
app/scripts/: load_manager.py
app/static/: gulpfile.js  package-lock.json  package.json  rollup.config.mjs  rollup.js
app/templates/: base.html  data_form.html  edit_data.html  get_data_sources.html  get_harvest_source.html  get_orgs.html  glossary.html  harvest_source.html  index.html  local_login.html  metrics_dashboard.html  openapi_explorer.html  org_form.html  source_form.html  swagger.html  view_data.html  view_dataset_data.html  view_job_data.html  view_org_data.html  view_org_list.html  view_source_data.html  view_source_list.html  view_validators.html
app/utils/: decorators.py
archive/: docker-compose.yml  pyproject.toml
archive/controller/: README.md  config.py
benchmarks/database/: README.md  compare_results.py  read-performance.md  run_pgbench.sh  summarize_pgbench.py
config/: logger_config.py
controller/: __init__.py  config.py
controller/dataset/: __init__.py  create.py  view.py
controller/job/: __init__.py  run.py  status.py
controller/source/: __init__.py  create.py  view.py
dags/: etl_pipeline.py  etl_pipeline_dcat.py  etl_pipeline_waf.py  hello-datagov-harvesting-logic.py  load.py  map-and-reduce.py  transform.py  tutorial.py
database/: README.md  __init__.py  cf_connect.sh  harvest_models.py  interface.py  interface.py1  load_csv.sh  load_locations.sh  models.py
datagovharvester/: __init__.py
datagovharvester/extract/: __init__.py  dcatus.py  utils.py
datagovharvester/utils/: json_utilities.py  s3.py  s3_utilities.py
datagovharvester/validate/: dcat_us.py
docs/: arcgis.mmd  dcat.mmd  dcat3-opensearch-flow.html  developer.md  harvesting.md  new_harvesting.mmd  old_harvesting.mmd  opensearch-dcat3-migration.md  opensearch-index-rebuild.md  routes.md  single_xml.mmd  waf_xml.mmd
docs/decisions/: 000-architecture.md  000-orchestrator.md  001-deployer.md  001-executor.md  999-template.md
docs/ops/: README.md  rebuild-opensearch-index.md
example_data/: valid_iso2_parent.xml
example_data/dcatus/: dcatus.json  dcatus3_0.json  dcatus3_0_invalid.json  dcatus3_0_no_identifier.json  dcatus_2.json  dcatus_bad_license_uri.json  dcatus_long_description.json  dcatus_multiple_invalid.json  dcatus_no_identifier.json  dcatus_same_title.json  dcatus_same_title_step_2.json  dcatus_single_record.json  dcatus_single_record_non-federal.json  dcatus_spatial_no_translate.json  dcatus_with_none.json  missing_title.json
example_data/iso_2_waf/: decode_error.xml  invalid_47662.xml  (+4 more)
harvester/: __init__.py  ckan_utils.py  compare.py  exceptions.py  extract.py  harvest.py  harvest_jobs_schema.py  load.py  logger_config.py  loggers.py  opensearch.py  opensearch_transform.py  runner_settings.py  transform.py  utils.py  waf.py
migrations/: README  alembic.ini  env.py  utils.py
postgresql/: Dockerfile
proxy/: .profile  nginx-common.conf  nginx-maintenance.conf  nginx-malicious.conf  nginx-maps.conf  nginx.conf
schemas/: federal_dataset.json  iso-non-federal_dataset.json  non-federal_dataset.json
scripts/: README.md  add_missing_datasets.py  clean-db.py  compare-catalogs.py  count_missing_outdated_datasets.py  db_optimizations.py  fake.py  harvest_source_counts.csv  load-test.py  load_test.py  monitor-cf-logs.sh  opensearch_status.py  opensearch_status.sh  orphan_job_clean_up.py  qa.py  refresh_dataset_mv.py  refresh_dcat_reference_data.py  scale-down.sh  scale-up.sh  smoke-test.py  sync_datasets.py  sync_db.py  ui_refresh.sh  ui_screenshot.py  update_dataset_view_count.py
shared/: __init__.py  constants.py  opensearch_schema.py
tests/: conftest.py  fixtures.json  generate_fixtures.py  nginx.conf  test_demo.py
utils/: json_utilities.py
(+453 files in other folders)
