[tool.poetry]
name = "datagov-harvester"
version = "0.5.0"
description = ""
authors = ["Datagov Team <datagov@gsa.gov>"]
maintainers = ["Datagov Team <datagov@gsa.gov>"]
readme = "README.md"
packages = [{ include = "harvester" }]
license = "LICENSE.md"                                  # TODO fix me
repository = "https://github.com/GSA/datagov-harvester"

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.8"

[tool.poetry.dependencies]
python = ">=3.13,<4.0"
jsonschema = ">=4"
python-dotenv = ">=1"
deepdiff = ">=6"
ckanapi = ">=4.7"
beautifulsoup4 = "^4.12.2"
sansjson = "^0.3.0"
sqlalchemy = "^2.0.25"
flask = "^3.0.2"
psycopg2-binary = "^2.9.9"
flask-sqlalchemy = "^3.1.1"
flask-wtf = "^1.2.1"
flask-migrate = "^4.0.7"
flask-bootstrap = "^3.3.7.1"
cloudfoundry-client = "^1.36.0"
pyjwt = "^2.8.0"
cryptography = "^42.0.8"
boltons = "^24.0.0"
jinja2-fragments = "^1.6.0"
flask-htmx = "^0.3.2"
gunicorn = "^23.0.0"
newrelic = "^10.2.0"
gevent = "^24.10.3"
geojson-validator = "^0.6.0"
GeoAlchemy2 = "^0.17.1"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.3.2"
ruff = "^0.11.5"
pytest-cov = "^4.0.0"
debugpy = "^1.8.1"
isort = "^5.13.2"
black = "^24.4.2"
pre-commit = "^3.7.1"
freezegun = "^1.5.1"
pytest-local-badge = "^1.0.3"
pytest-playwright = "^0.7.0"
pytest-flask = "^1.3.0"
playwright = "^1.50.0"

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "migrations",
]

# Same as Black.
line-length = 88

# Assume Python 3.10.
target-version = "py310"

[tool.ruff.lint]
# Enable pycodestyle (`E`) and Pyflakes (`F`) codes by default.
select = ["E", "F"]
ignore = []

# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 10

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
