[tool.poetry]
name = "datagov-harvester"
version = "0.5.0"
description = ""
authors = ["Datagov Team <datagov@gsa.gov>"]
maintainers = ["Datagov Team <datagov@gsa.gov>"]
readme = "README.md"
packages = [{ include = "harvester" }]
license = "LICENSE.md"                                  # TODO fix me
repository = "https://github.com/GSA/datagov-harvester"

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.8"

[tool.poetry.dependencies]
python = ">=3.13,<4.0"
jsonschema = {extras = ["format"], version = "^4.24.0"}
python-dotenv = ">=1"
deepdiff = ">=6"
ckanapi = ">=4.7"
beautifulsoup4 = "^4.13.4"
sansjson = "^0.3.0"
sqlalchemy = "^2.0.41"
flask = "^3.1.1"
flask-sqlalchemy = "^3.1.1"
flask-wtf = "^1.2.1"
flask-migrate = "^4.0.7"
flask-bootstrap = "^3.3.7.1"
cloudfoundry-client = "^1.36.0"
pyjwt = "^2.8.0"
cryptography = "^45.0.3"
boltons = "^25.0.0"
jinja2-fragments = "^1.9.0"
flask-htmx = "^0.4.0"
gunicorn = "^23.0.0"
newrelic = "^10.12.0"
gevent = "^25.5.1"
geojson-validator = "^0.6.0"
GeoAlchemy2 = "^0.17.1"
protobuf = "5.29.5" #pinned due to cloudfoundry-client needing <6.0.0
psycopg = {extras = ["binary"], version = "^3.2.9"}

[tool.poetry.group.dev.dependencies]
pytest = ">=7.3.2"
ruff = "^0.11.12"
pytest-cov = "^6.1.1"
debugpy = "^1.8.1"
isort = "^6.0.1"
black = "^25.1.0"
pre-commit = "^4.2.0"
freezegun = "^1.5.2"
pytest-local-badge = "^1.0.3"
pytest-playwright = "^0.7.0"
pytest-flask = "^1.3.0"
playwright = "^1.52.0"

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "migrations",
]

# Same as Black.
line-length = 88

# Assume Python 3.10.
target-version = "py310"

[tool.ruff.lint]
# Enable pycodestyle (`E`) and Pyflakes (`F`) codes by default.
select = ["E", "F"]
ignore = []

# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 10

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
