[tool.poetry]
name = "datagov-harvester"
version = "0.5.0"
description = ""
authors = ["Datagov Team <datagov@gsa.gov>"]
maintainers = ["Datagov Team <datagov@gsa.gov>"]
readme = "README.md"
packages = [{ include = "harvester" }]
license = "LICENSE.md"                                  # TODO fix me
repository = "https://github.com/GSA/datagov-harvester"

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.8"

[tool.poetry.dependencies]
python = "~3.12.0" # stay with 3.12 until *.apps.internal:61443 works for 3.13
jsonschema = {extras = ["format"], version = "^4.26.0"}
python-dotenv = ">=1"
deepdiff = ">=8.6.1"
ckanapi = ">=4.7"
beautifulsoup4 = "^4.14.3"
sansjson = "^0.3.0"
sqlalchemy = "^2.0.46"
flask = "^3.1.2"
flask-sqlalchemy = "^3.1.1"
flask-wtf = "^1.2.1"
flask-migrate = "^4.0.7"
flask-bootstrap = "^3.3.7.1"
cloudfoundry-client = "^1.40.0"
pyjwt = "^2.11.0"
cryptography = "^46.0.4"
boltons = "^25.0.0"
jinja2-fragments = "^1.11.0"
flask-htmx = "^0.4.0"
gunicorn = "^25.1.0"
newrelic = "^11.4.0"
gevent = "^25.9.1"
geojson-validator = "^0.6.0"
GeoAlchemy2 = "^0.18.1"
protobuf = "^6.33.0"
psycopg = {extras = ["binary"], version = "^3.3.2"}
aiohttp = "^3.13.3" #SNYK-PYTHON-AIOHTTP-10742466
urllib3 = ">=2.5.0" #SNYK-PYTHON-URLLIB3-10390193, SNYK-PYTHON-URLLIB3-10390194
alembic-postgresql-enum = "^1.9.0"
google-auth = "^2.48.0"
google-api-python-client = "^2.190.0"
pyasn1 = "^0.6.2" #SNYK-PYTHON-PYASN1-15032639
werkzeug = "^3.1.5" #SNYK-PYTHON-WERKZEUG-14908843
apiflask = "^3.0.2"
flask-talisman = "^1.1.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.3.2"
ruff = "^0.15.1"
pytest-cov = "^7.0.0"
debugpy = "^1.8.20"
isort = "^7.0.0"
black = "^26.1.0"
pre-commit = "^4.5.1"
freezegun = "^1.5.5"
pytest-local-badge = "^1.0.3"
pytest-playwright = "^0.7.1"
pytest-flask = "^1.3.0"
playwright = "^1.58.0"

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "migrations",
]

# Same as Black.
line-length = 88

# Assume Python 3.10.
target-version = "py310"

[tool.ruff.lint]
# Enable pycodestyle (`E`) and Pyflakes (`F`) codes by default.
select = ["E", "F"]
ignore = []

# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 10

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
